--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
         <h1>Welcome to My Website</h1>  
-        <p>HELLO WORD</p>
+        <p>Hello Pillu</p>
     </main>
   </body>
 </html>
