--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>Hyyy
+<html lang="en-US">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Topp</title>
-  </head> 
+  </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
-        <p>Hello Pillu</p>
+      <h1>Welcome to My Website</h1>
+      <p>Hello Pillu</p>
     </main>
   </body>
+</html>
 
